--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   </div>    
   <div class="chat-sidebar">  
-    <img src= "./A.png" alt="Chat Sidebar Image">
+    <img src= "./B.png" alt="Chat Sidebar Image">
     <!-- 假设这里插入一张图片 -->
   </div>  
 </div>  
