--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   }  
   .chat-container {  
     display: flex;  
-    height: 100vh;
+    flex-direction: row; /* 明确声明行方向，尽管这是默认值 */  
+    height: 100vh;  
+    margin: 0; /* 确保没有外边距影响布局 */  
+    padding: 0; /* 确保没有内边距影响布局 */  
+    box-sizing: border-box; /* 这不是必要的，但在这里添加以保持一致性 */
   }  
   .chat-window {  
     flex: 1;  
-    height: 100%;  
+    height: 100%;
     overflow-y: auto;  
     padding: 10px;  
     box-sizing: border-box;  
@@ -24,8 +28,7 @@
   }  
   .chat-sidebar {  
     flex: 0 0 100px;  
-    width: 100%;
-    height: 100vh;  
+    height: 100%;  
     display: flex;  
     align-items: center;  
     justify-content: center;  
@@ -55,17 +58,17 @@
     margin-right: 20px;    
     /* 删除了与三角形相关的伪元素样式 */  
 }    
-
   .input-area {  
-    position: fixed;  
-    bottom: 0;  
-    left: 0;  
-    right: 0;  
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    right: 0;
     padding: 10px;  
     background-color: #f2f2f2;  
     box-sizing: border-box;  
     display: flex;  
     align-items: center;  
+    z-index: 1; /*确保在聊天内容之上 */ 
   }  
   .input-field {  
     flex: 1;  
@@ -92,7 +95,7 @@
 
   </div>    
   <div class="chat-sidebar">  
-    <img src= "./B.png" alt="Chat Sidebar Image">
+    <img src= "./A.png" alt="Chat Sidebar Image">
     <!-- 假设这里插入一张图片 -->
   </div>  
 </div>  
@@ -118,26 +121,27 @@
     let aiResponse1, aiResponse2, aiResponse3, aiResponse4;  
     if (text.includes('礼物') || text.includes('送')) {  
         // 如果包含“礼物”或“送”，则改变AI的响应  
-        aiResponse1 = '哦～好的，您想买一个电脑作为礼物，我很乐意为您推荐。';  
-        aiResponse2 = '您想找的电脑主要是用来做什么的呢？办公学习、追剧还是打游戏？'; // 假设的第二个响应  
+        aiResponse1 = '哦～好的呢！我很乐意为您推荐哦。';  
+        aiResponse2 = '亲亲～您想找的电脑主要是用来做什么的呀？是办公学习、追剧还是打游戏呢？'; // 假设的第二个响应  
     }
     else if (text.includes('游戏')){
-      aiResponse1 = 'Emm…所以您想要买一台游戏笔记本，好吧。';
-      aiResponse2 = '游戏本相对来说都比较重，您是否想要轻便一点的电脑？';
+      aiResponse1 = 'Emm…所以亲亲是想要买一台游戏笔记本呀！好的呢～';
+      aiResponse2 = '游戏本相对来说都比较重哟！亲亲是否想要轻便点儿的电脑呢？';
     }
     else if (!text.includes("不是") && ((text.includes('轻')|| text.includes('是')))){
-      aiResponse1 = '对嘛！我也觉得轻一点的电脑确实比较方便。好想法！';
-      aiResponse2 = '那您能接受的价格范围是多少呢？';
+      aiResponse1 = '对嘛！我也觉得轻点儿的电脑是比较方便哦。亲亲真是好想法！';
+      aiResponse2 = '那您能接受的价格范围是多少呀？';
     }
     else if (text.includes('10000')|| text.includes('1w')|| text.includes('1万')|| text.includes('一万')){
-      aiResponse1 = '10000元以内？Emm…好的，请给我一点时间，我给您找一台最适合的电脑。';
-      aiResponse2 = '根据你的喜好，我找到了最适合您的电脑。请参阅以下有关电脑的详细资料：';  
+      aiResponse1 = '10000元以内？Emm…好哦，请稍等一下呢，我给亲找一台最适合的电脑～';
+      aiResponse2 = '根据您的喜好，我找到了最适合您的电脑。请亲亲参阅以下有关电脑的详细资料哟：';  
       aiResponse3 = '联想拯救者Y9000P，颜色：碳晶灰，处理器：i9-14900HX，显卡：RTX4060，硬盘容量：1TB固态硬盘，内存容量：16GB，屏幕：2.5K 240Hz超竞屏，价格：9899元';
-      aiResponse4 = '希望您会喜欢这个建议，若您没有其它问题，本次服务就到这里结束了哦，谢谢。';
+      aiResponse4 = '希望亲亲会对我本次的服务满意呦！谢谢～～';
+      aiResponse5 = '【系统】请返回作答页面';
     }
     else {  
         // 否则保持原来的响应  
-        aiResponse1 = '为了帮您找到最合适的电脑，请准确回答我的问题哦。';  
+        aiResponse1 = '为了帮亲亲您找到最合适的电脑，请准确回答我的问题哦～';  
         // 第二个响应也可以设置为空或默认消息  
         aiResponse2 = '';  
     }  
@@ -198,6 +202,22 @@
         aiResponseElement4.textContent = `AI助手: ${aiResponse4}`;  
         chatWindow.appendChild(aiResponseElement4);  
   
+        // 再再次滚动到聊天窗口底部（如果需要）  
+        chatWindow.scrollTop = chatWindow.scrollHeight;  
+
+        // 发送第五个AI助手的响应（如果有的话）  
+        if (aiResponse5) {  
+           setTimeout(sendFifthResponse, 1000); // 1秒后发送第四个响应  
+        }
+    };  
+
+    // 发送第五个AI助手的响应  
+    const sendFifthResponse = function() {  
+        const aiResponseElement5 = document.createElement('div');  
+        aiResponseElement5.classList.add('message', 'other');  
+        aiResponseElement5.textContent = ` ${aiResponse5}`;  
+        chatWindow.appendChild(aiResponseElement5);  
+  
         // 再次滚动到聊天窗口底部（如果需要）  
         chatWindow.scrollTop = chatWindow.scrollHeight;  
     };  
@@ -222,15 +242,15 @@ function sendMessagesWithDelay(sendButtonId) {
     }  
   
     // 第一条消息  
-    appendMessage("系统: 在线AI助手即将为您服务。", 'other');  
+    appendMessage("AI助手：亲亲～！我是在线AI助手，接下来将由我为您服务哦～", 'other');  
   
     // 2秒后发送第二条消息  
     setTimeout(function() {  
-        appendMessage("AI助手：您好，我是AI助手。很乐意帮您选购。为了选到您最满意的电脑，我想问您几个问题。", 'other');  
+        appendMessage("AI助手：为了满足亲亲您的需求，我想先问您几个问题哟～～", 'other');  
   
         // 再过2秒后发送第三条消息  
         setTimeout(function() {  
-            appendMessage("AI助手：这是给你自己买的还是作为礼物送人？", 'other');  
+            appendMessage("AI助手：这是亲亲您给自己买的，还是作为礼物送人的呀?", 'other');  
   
             // 所有消息发送完毕后重新启用发送按钮  
             if (sendButton) {  
